--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=e3ec90dc79033c0d1551",
+    "/css/app.css": "/css/app.css?id=27da8ca5864532b008e2"
 }
